# crew-ai-test

./: pyproject.toml
creation_d_une_equipe_pour_automatiser_la_logistique_odoo/: README.md
creation_d_une_equipe_pour_automatiser_la_logistique_odoo/src/creation_d_une_equipe_pour_automatiser_la_logistique_odoo/config/: tasks.yaml
src/creation_d_une_equipe_pour_automatiser_la_logistique_odoo/: crew.py  main.py
src/creation_d_une_equipe_pour_automatiser_la_logistique_odoo/config/: agents.yaml
