[project]
name = "creation_d_une_equipe_pour_automatiser_la_logistique_odoo"
version = "0.1.0"
description = "creation_d_une_equipe_pour_automatiser_la_logistique_odoo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
creation_d_une_equipe_pour_automatiser_la_logistique_odoo = "creation_d_une_equipe_pour_automatiser_la_logistique_odoo.main:run"
run_crew = "creation_d_une_equipe_pour_automatiser_la_logistique_odoo.main:run"
train = "creation_d_une_equipe_pour_automatiser_la_logistique_odoo.main:train"
replay = "creation_d_une_equipe_pour_automatiser_la_logistique_odoo.main:replay"
test = "creation_d_une_equipe_pour_automatiser_la_logistique_odoo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
